--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Yake Wei</name>
+                <name>Yake Wei (卫雅珂)</name>
               </p>
-              <p>Hello, my name is Yake Wei (卫雅珂). I am a first year PhD student at <a href="http://ai.ruc.edu.cn/">Gaoling School of Artificial Intelligence</a>, Renmin University of China. I am advised by <a href="https://dtaoo.github.io/">Prof. Di Hu</a>. Now my research interests focus on multi-modal learning.
+              <p>I am a first year PhD student at <a href="http://ai.ruc.edu.cn/">Gaoling School of Artificial Intelligence</a>, Renmin University of China. I am advised by <a href="https://dtaoo.github.io/">Prof. Di Hu</a>. Now my research interests focus on multi-modal learning.
               </p>
 
               <p>I received a BS in Computer Science and Technology from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> in 2021.
@@ -37,7 +37,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
-              <a href="images/yake.jpeg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/yake.jpeg" class="hoverZoomLink"></a>
+              <a href="images/yake.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/yake.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -90,8 +90,7 @@
               <br>
               <em>CVPR</em>, 2022 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
               <br>
-              <a href="#">arXiv</a>/
-              <a href="https://github.com/GeWu-Lab/OGM-GE_CVPR2022">Code
+              <a href="#">arXiv</a>, <a href="https://github.com/GeWu-Lab/OGM-GE_CVPR2022">Code
               </a>
               <br>
               <p>Alleviate optimization imbalance in multi-modal learning via on-the-fly gradient modulation.</p>
@@ -111,8 +110,7 @@
               <br>
               <em>CVPR</em>, 2022 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
               <br>
-              <a href="https://arxiv.org/pdf/2203.14072.pdf">arXiv</a>/
-              <a href="https://gewu-lab.github.io/MUSIC-AVQA/">project page
+              <a href="https://arxiv.org/pdf/2203.14072.pdf">arXiv</a>, <a href="https://gewu-lab.github.io/MUSIC-AVQA/">project page
               </a>
               <br>
               <p>Audio-Visual Question Answering.</p>
@@ -130,10 +128,9 @@
               <a href="https://dtaoo.github.io">Di Hu</a>, <strong>Yake Wei</strong>, <a href="https://shvdiwnkozbw.github.io/">Rui Qian</a>, <a href="https://weiyaolin.github.io/">Weiyao Lin</a>, <a href="https://scholar.google.com/citations?user=v5LctN8AAAAJ&hl">Ruihua Song</a>, <a href="https://scholar.google.com/citations?user=tbxCHJgAAAAJ">Ji-Rong Wen</a>
               <br>
               <br>
-              <em>TPAMI</em>, 2021
+              <em>TPAMI</em>
               <br>
-              <a href="https://arxiv.org/pdf/2112.11749.pdf">arXiv</a>/
-              <a href="https://gewu-lab.github.io/CSOL_TPAMI2021/">project page
+              <a href="https://arxiv.org/pdf/2112.11749.pdf">arXiv</a>, <a href="https://gewu-lab.github.io/CSOL_TPAMI2021/">project page
               </a>
               <br>
               <p>Discriminative souding object localization.</p>
