--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <papertitle>Learning to Answer Questions in Dynamic Audio-Visual Scenarios</papertitle>
               <br>
               <br>
-              <a href="https://ayameyao.github.io/">Guangyao Li*</a>, <strong>Yake Wei*</strong>, <a href="https://yapengtian.org/">Yapeng Tian</a>, <a href="https://www.cs.rochester.edu/~cxu22/">Chenliang Xu</a>, <a href="https://scholar.google.com/citations?user=tbxCHJgAAAAJ">Ji-Rong Wen</a>, <a href="https://dtaoo.github.io">Di Hu</a>
+              <a href="https://ayameyao.github.io/">Guangyao Li*</a>, <strong>Yake Wei*</strong>, <a href="https://yapengtian.org/">Yapeng Tian*</a>, <a href="https://www.cs.rochester.edu/~cxu22/">Chenliang Xu</a>, <a href="https://scholar.google.com/citations?user=tbxCHJgAAAAJ">Ji-Rong Wen</a>, <a href="https://dtaoo.github.io">Di Hu</a>
               <br>
               <br>
               <em>CVPR</em>, 2022 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
