--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <br>
               <em>CVPR</em>, 2022 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
               <br>
-              <a href="#">arXiv</a>, <a href="https://github.com/GeWu-Lab/OGM-GE_CVPR2022">Code
+              <a href="#">arXiv</a>/<a href="https://github.com/GeWu-Lab/OGM-GE_CVPR2022">Code
               </a>
               <br>
               <p>Alleviate optimization imbalance in multi-modal learning via on-the-fly gradient modulation.</p>
@@ -110,7 +110,7 @@
               <br>
               <em>CVPR</em>, 2022 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
               <br>
-              <a href="https://arxiv.org/pdf/2203.14072.pdf">arXiv</a>, <a href="https://gewu-lab.github.io/MUSIC-AVQA/">project page
+              <a href="https://arxiv.org/pdf/2203.14072.pdf">arXiv</a>/<a href="https://gewu-lab.github.io/MUSIC-AVQA/">project page
               </a>
               <br>
               <p>Audio-Visual Question Answering.</p>
@@ -130,7 +130,7 @@
               <br>
               <em>TPAMI</em>
               <br>
-              <a href="https://arxiv.org/pdf/2112.11749.pdf">arXiv</a>, <a href="https://gewu-lab.github.io/CSOL_TPAMI2021/">project page
+              <a href="https://arxiv.org/pdf/2112.11749.pdf">arXiv</a>/<a href="https://gewu-lab.github.io/CSOL_TPAMI2021/">project page
               </a>
               <br>
               <p>Discriminative souding object localization.</p>
