--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <p>I am a first year PhD student at <a href="http://ai.ruc.edu.cn/">Gaoling School of Artificial Intelligence</a>, Renmin University of China. I am advised by <a href="https://dtaoo.github.io/">Prof. Di Hu</a>. Now my research interests focus on multi-modal learning.
               </p>
 
-              <p>I received a BS in Computer Science and Technology from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> in 2021.
+              <p>I received my bachelor's degree in Computer Science and Technology from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> in 2021.
               </p>
 
               <p style="text-align:center">
@@ -90,7 +90,7 @@
               <br>
               <em>CVPR</em>, 2022 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
               <br>
-              <a href="#">arXiv</a>/<a href="https://github.com/GeWu-Lab/OGM-GE_CVPR2022">Code
+              <a href="https://arxiv.org/pdf/2203.15332.pdf">arXiv</a>/<a href="https://github.com/GeWu-Lab/OGM-GE_CVPR2022">Code
               </a>
               <br>
               <p>Alleviate optimization imbalance in multi-modal learning via on-the-fly gradient modulation.</p>
@@ -113,7 +113,7 @@
               <a href="https://arxiv.org/pdf/2203.14072.pdf">arXiv</a>/<a href="https://gewu-lab.github.io/MUSIC-AVQA/">project page
               </a>
               <br>
-              <p>Audio-Visual Question Answering.</p>
+              <p>Audio-Visual Question Answering and propose MUSIC-AVQA dataset.</p>
             </td>
           </tr>
 
