--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <papertitle>Balanced Multimodal Learning via On-the-fly Gradient Modulation</papertitle>
               <br>
               <br>
-              Xiaokang Peng*, <strong>Yake Wei*</strong>, Andong Deng, Dong Wang, <a href="https://dtaoo.github.io">Di Hu</a>
+              Xiaokang Peng*, <strong>Yake Wei*</strong>, <a href="https://antony0621.github.io/">Andong Deng</a>, Dong Wang, <a href="https://dtaoo.github.io">Di Hu</a>
               <br>
               <br>
               <em>CVPR</em>, 2022 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
