--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <br>
               <em>CVPR</em>, 2022 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
               <br>
-              <a href="https://arxiv.org/pdf/2203.15332.pdf">arXiv</a> / <a href="https://github.com/GeWu-Lab/OGM-GE_CVPR2022">Code
+              <a href="https://arxiv.org/pdf/2203.15332.pdf">arXiv</a> / <a href="https://github.com/GeWu-Lab/OGM-GE_CVPR2022">code
               </a>
               <br>
               <p>Alleviate optimization imbalance in multi-modal learning via on-the-fly gradient modulation.</p>
