--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <a href="https://arxiv.org/pdf/2112.11749.pdf">arXiv</a> / <a href="https://gewu-lab.github.io/CSOL_TPAMI2021/">project page
               </a>
               <br>
-              <p>Discriminative souding object localization.</p>
+              <p>Discriminative sounding objects localization.</p>
             </td>
           </tr>
 
