--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>News</heading>
             <p>
+              <strong>[2022-05]</strong> Gave a talk @ <a href="https://2022.baai.ac.cn/">2022 BAAI Conference</a> , Please find slides <a href="https://zenodo.org/record/6597495/files/2022%E6%99%BA%E6%BA%90%E5%A4%A7%E4%BC%9A-%E5%8D%AB%E9%9B%85%E7%8F%82.pdf?download=1">here</a>!
+            </p>
+            <p>
               <strong>[2022-03]</strong> Two papers accepted by CVPR 2022, thanks to all co-authors!
             </p>
             <p>
@@ -148,7 +151,7 @@
                 <br>
                 <br>
                 <div style="float:left;">
-                    Updated at Mar. 2022
+                    Updated at May. 2022
                 </div>
                 <div style="float:right;">
                     Thanks <a href="https://jonbarron.info">Jon Barron</a> for this amazing template.
