--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <td style="padding:20px;width:100%;vertical-align:middle">
           <heading>Services</heading>
           <p>
-            <strong>Reviewer:</strong> CVPR 2022
+            <strong>Reviewer:</strong> CVPR 2022, ECCV 2022
           </p>
         </td>
       </tr>
