--- a/index.html
+++ b/index.html
@@ -49,9 +49,12 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>News</heading>
             <p>
-              <strong>[2022-05]</strong> Gave a talk @ <a href="https://2022.baai.ac.cn/">2022 BAAI Conference</a> . Please find slides <a href="https://zenodo.org/record/6597495/files/2022%E6%99%BA%E6%BA%90%E5%A4%A7%E4%BC%9A-%E5%8D%AB%E9%9B%85%E7%8F%82.pdf?download=1">here</a>!
+              <strong>[2022-08]</strong> A survey on the audio-visual learning is released! <a href="https://gewu-lab.github.io/audio-visual-learning/">[website]
             </p>
             <p>
+            <p>
+              <strong>[2022-05]</strong> Gave a talk @ <a href="https://2022.baai.ac.cn/">2022 BAAI Conference</a> . Please find slides <a href="https://zenodo.org/record/6597495/files/2022%E6%99%BA%E6%BA%90%E5%A4%A7%E4%BC%9A-%E5%8D%AB%E9%9B%85%E7%8F%82.pdf?download=1">here</a>!
+            </p>
               <strong>[2022-03]</strong> Two papers accepted by CVPR 2022, thanks to all co-authors!
             </p>
             <p>
@@ -79,6 +82,25 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <heading style="padding:20px">Publications</heading>(&#42; equal contribution)
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/survey.jpg" alt="clean-usnob" width="320" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>Learning in Audio-visual Context: A Review, Analysis, and New Perspective</papertitle>
+              <br>
+              <br>
+              <em>Under review</em>, 2022
+              <br>
+              <strong>Yake Wei*</strong>, <a href="https://dtaoo.github.io">Di Hu</a>, <a href="https://yapengtian.org/">Yapeng Tian</a>, <a href="https://scholar.google.com/citations?user=ahUibskAAAAJ&hl=zh-CN">Xuelong Li</a>
+              <br>
+              <br>
+              <a href="https://arxiv.org/abs/2208.09579">arXiv</a> / <a href="https://gewu-lab.github.io/audio-visual-learning/">website
+              </a>
+              <br>
+              <p>A systematicall survey on the audio-visual learning field.</p>
+            </td>
+          </tr>
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
