--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <a href="https://arxiv.org/abs/2208.09579">arXiv</a> / <a href="https://gewu-lab.github.io/audio-visual-learning/">website
               </a>
               <br>
-              <p>A systematicall survey on the audio-visual learning field.</p>
+              <p>A systematical survey on the audio-visual learning field.</p>
             </td>
           </tr>
 
