--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>News</heading>
             <p>
-              <strong>[2022-08]</strong> A survey on the audio-visual learning is released! <a href="https://gewu-lab.github.io/audio-visual-learning/">[website]</a>
+              <strong>[2022-08]</strong> We wrote an article about recent advances in audio-visual learning! <a href="https://gewu-lab.github.io/audio-visual-learning/">[website]</a>
             </p>
             <p>
               <strong>[2022-05]</strong> Gave a talk @ <a href="https://2022.baai.ac.cn/">2022 BAAI Conference</a> . Please find slides <a href="https://zenodo.org/record/6597495/files/2022%E6%99%BA%E6%BA%90%E5%A4%A7%E4%BC%9A-%E5%8D%AB%E9%9B%85%E7%8F%82.pdf?download=1">here</a>!
@@ -91,11 +91,10 @@
               <br>
               <em>Under review</em>, 2022
               <br>
-              <strong>Yake Wei*</strong>, <a href="https://dtaoo.github.io">Di Hu</a>, <a href="https://yapengtian.org/">Yapeng Tian</a>, <a href="https://scholar.google.com/citations?user=ahUibskAAAAJ&hl=zh-CN">Xuelong Li</a>
+              <strong>Yake Wei</strong>, <a href="https://dtaoo.github.io">Di Hu</a>, <a href="https://yapengtian.org/">Yapeng Tian</a>, <a href="https://scholar.google.com/citations?user=ahUibskAAAAJ&hl=zh-CN">Xuelong Li</a>
               <br>
               <br>
-              <a href="https://arxiv.org/abs/2208.09579">arXiv</a> / <a href="https://gewu-lab.github.io/audio-visual-learning/">website
-              </a>
+              <a href="https://arxiv.org/abs/2208.09579">arXiv</a> / <a href="https://gewu-lab.github.io/audio-visual-learning/">website</a> / <a href="https://gewu-lab.github.io/awesome-audiovisual-learning/">awesome list</a> 
               <br>
               <p>A systematical survey on the audio-visual learning field.</p>
             </td>
