--- a/index.html
+++ b/index.html
@@ -78,27 +78,33 @@
       </tr>
     </tbody></table>
 
+    <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+      <heading style="padding:20px">Preprint</heading>
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle">
+          <img src="images/survey.jpg" alt="clean-usnob" width="320" height="160">
+        </td>
+        <td width="75%" valign="middle">
+          <papertitle>Learning in Audio-visual Context: A Review, Analysis, and New Perspective</papertitle>
+          <br>
+          <br>
+          <em>Under review</em>, 2022
+          <br>
+          <strong>Yake Wei</strong>, <a href="https://dtaoo.github.io">Di Hu</a>, <a href="https://yapengtian.org/">Yapeng Tian</a>, <a href="https://scholar.google.com/citations?user=ahUibskAAAAJ&hl=zh-CN">Xuelong Li</a>
+          <br>
+          <br>
+          <a href="https://arxiv.org/abs/2208.09579">arXiv</a> / <a href="https://gewu-lab.github.io/audio-visual-learning/">website</a> / <a href="https://gewu-lab.github.io/awesome-audiovisual-learning/">awesome list</a> 
+          <br>
+          <p>A systematical survey on the audio-visual learning field.</p>
+        </td>
+      </tr>
+
+
+    </tbody></table>
+
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <heading style="padding:20px">Publications</heading>(&#42; equal contribution)
-          <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/survey.jpg" alt="clean-usnob" width="320" height="160">
-            </td>
-            <td width="75%" valign="middle">
-              <papertitle>Learning in Audio-visual Context: A Review, Analysis, and New Perspective</papertitle>
-              <br>
-              <br>
-              <em>Under review</em>, 2022
-              <br>
-              <strong>Yake Wei</strong>, <a href="https://dtaoo.github.io">Di Hu</a>, <a href="https://yapengtian.org/">Yapeng Tian</a>, <a href="https://scholar.google.com/citations?user=ahUibskAAAAJ&hl=zh-CN">Xuelong Li</a>
-              <br>
-              <br>
-              <a href="https://arxiv.org/abs/2208.09579">arXiv</a> / <a href="https://gewu-lab.github.io/audio-visual-learning/">website</a> / <a href="https://gewu-lab.github.io/awesome-audiovisual-learning/">awesome list</a> 
-              <br>
-              <p>A systematical survey on the audio-visual learning field.</p>
-            </td>
-          </tr>
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
