--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <papertitle>Learning in Audio-visual Context: A Review, Analysis, and New Perspective</papertitle>
           <br>
           <br>
-          <em>Under review</em>, 2022
+          <em>Under review</em>
           <br>
           <strong>Yake Wei</strong>, <a href="https://dtaoo.github.io">Di Hu</a>, <a href="https://yapengtian.org/">Yapeng Tian</a>, <a href="https://scholar.google.com/citations?user=ahUibskAAAAJ&hl=zh-CN">Xuelong Li</a>
           <br>
