--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
           <papertitle>Learning in Audio-visual Context: A Review, Analysis, and New Perspective</papertitle>
           <br>
           <br>
-          <em>Under review</em>
-          <br>
           <strong>Yake Wei</strong>, <a href="https://dtaoo.github.io">Di Hu</a>, <a href="https://yapengtian.org/">Yapeng Tian</a>, <a href="https://scholar.google.com/citations?user=ahUibskAAAAJ&hl=zh-CN">Xuelong Li</a>
           <br>
           <br>
+          <em>Under review</em>
+          <br>
           <a href="https://arxiv.org/abs/2208.09579">arXiv</a> / <a href="https://gewu-lab.github.io/audio-visual-learning/">website</a> / <a href="https://gewu-lab.github.io/awesome-audiovisual-learning/">awesome list</a> 
           <br>
-          <p>A systematical survey on the audio-visual learning field.</p>
+          <p>A systematical survey about the audio-visual learning field.</p>
         </td>
       </tr>
 
