--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Yake Wei (卫雅珂)</name>
               </p>
-              <p>I am a first year PhD student at <a href="http://ai.ruc.edu.cn/">Gaoling School of Artificial Intelligence</a>, Renmin University of China. I am advised by <a href="https://dtaoo.github.io/">Prof. Di Hu</a>. Now my research interests focus on multi-modal learning.
+              <p>I am a second year PhD student at <a href="http://ai.ruc.edu.cn/">Gaoling School of Artificial Intelligence</a>, Renmin University of China. I am advised by <a href="https://dtaoo.github.io/">Prof. Di Hu</a>. Now my research interests focus on multi-modal learning.
               </p>
 
               <p>I received my bachelor's degree in Computer Science and Technology from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> in 2021.
@@ -72,7 +72,10 @@
         <td style="padding:20px;width:100%;vertical-align:middle">
           <heading>Services</heading>
           <p>
-            <strong>Reviewer:</strong> CVPR 2022, ECCV 2022
+            <strong>Conference Reviewer:</strong> CVPR 2022-2023, ECCV 2022, AAAI 2023
+          </p>
+          <p>
+            <strong>Journal Reviewer:</strong> TMM
           </p>
         </td>
       </tr>
@@ -177,7 +180,7 @@
                 <br>
                 <br>
                 <div style="float:left;">
-                    Updated at August. 2022
+                    Updated at Jan. 2023
                 </div>
                 <div style="float:right;">
                     Thanks <a href="https://jonbarron.info">Jon Barron</a> for this amazing template.
