--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Yake Wei (卫雅珂)</name>
               </p>
-              <p>I am a second year PhD student at <a href="http://ai.ruc.edu.cn/">Gaoling School of Artificial Intelligence</a>, Renmin University of China. I am advised by <a href="https://dtaoo.github.io/">Prof. Di Hu</a>. Now my research interests focus on multi-modal learning.
+              <p>I am a third year PhD student at <a href="http://ai.ruc.edu.cn/">Gaoling School of Artificial Intelligence</a>, Renmin University of China. I am advised by <a href="https://dtaoo.github.io/">Prof. Di Hu</a>. Now I am having a visiting in <a href="http://www.humansensing.cs.cmu.edu/">Human Sensing Lab</a> @ CMU. My research interests focus on multi-modal learning.
               </p>
 
               <p>I received my bachelor's degree in Computer Science and Technology from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> in 2021.
@@ -48,6 +48,18 @@
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>News</heading>
+            <p>
+              <strong>[2024-02]</strong> One paper accepted by CVPR, thanks to all co-authors!
+            </p>
+            <p>
+              <strong>[2024-01]</strong> One paper accepted by ICLR, thanks to all co-authors!
+            </p>
+            <p>
+              <strong>[2023-10]</strong> Start visiting in <a href="http://www.humansensing.cs.cmu.edu/">Human Sensing Lab</a> @ CMU!
+            </p>
+            <p>
+              <strong>[2023-10]</strong> One paper accepted by PR, thanks to all co-authors!
+            </p>
             <p>
               <strong>[2022-08]</strong> We wrote an article about recent advances in audio-visual learning! <a href="https://gewu-lab.github.io/audio-visual-learning/">[website]</a>
             </p>
