--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <strong>[2023-10]</strong> Start visiting in <a href="http://www.humansensing.cs.cmu.edu/">Human Sensing Lab</a> @ CMU!
             </p>
             <p>
-              <strong>[2023-10]</strong> One paper accepted by PR, thanks to all co-authors!
+              <strong>[2023-10]</strong> One paper accepted by Pattern Recognition, thanks to all co-authors!
             </p>
             <p>
               <strong>[2022-08]</strong> We wrote an article about recent advances in audio-visual learning! <a href="https://gewu-lab.github.io/audio-visual-learning/">[website]</a>
@@ -84,10 +84,10 @@
         <td style="padding:20px;width:100%;vertical-align:middle">
           <heading>Services</heading>
           <p>
-            <strong>Conference Reviewer:</strong> CVPR 2022-2023, ECCV 2022, AAAI 2023
+            <strong>Conference Reviewer:</strong> CVPR 2022-2024, ECCV 2022, ICCV 2023, AAAI 2023-2024
           </p>
           <p>
-            <strong>Journal Reviewer:</strong> TMM
+            <strong>Journal Reviewer:</strong> TMM, TPAMI
           </p>
         </td>
       </tr>
@@ -120,6 +120,26 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <heading style="padding:20px">Publications</heading>(&#42; equal contribution)
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/balance2022.jpg" alt="clean-usnob" width="320" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>Geometric-inspired graph-based Incomplete Multi-view Clustering</papertitle>
+              <br>
+              <br>
+              Zequn Yang, Han Zhang, <strong>Yake Wei</strong>, Zheng Wang, Feiping Nie, <a href="https://dtaoo.github.io">Di Hu</a>
+              <br>
+              <br>
+              <em>Pattern Recognition</em>
+              <br>
+              <a href="https://www.sciencedirect.com/science/article/pii/S0031320323007793">paper</a> / <a href="https://github.com/GeWu-Lab/Geometric-Inspired-Graph-based-Incomplete-Multi-view-Clustering">code
+              </a>
+              <br>
+              <p>Conduct geometric analyses to mitigate missing views in weight aggregation.</p>
+            </td>
+          </tr>
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
