--- a/index.html
+++ b/index.html
@@ -123,7 +123,28 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/balance2022.jpg" alt="clean-usnob" width="320" height="160">
+              <img src="images/mmrobust.jpg" alt="clean-usnob" width="320" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>Quantifying and Enhancing Multi-modal Robustness with Modality Preference</papertitle>
+              <br>
+              <br>
+              Zequn Yang, <strong>Yake Wei</strong>, Ce Liang, <a href="https://dtaoo.github.io">Di Hu</a>
+              <br>
+              <br>
+              <em>ICLR</em>, 2024
+              <br>
+              <a href="https://arxiv.org/pdf/2402.06244.pdf">arXiv</a> / <a href="https://github.com/GeWu-Lab/Certifiable-Robust-Multi-modal-Training">code
+              </a>
+              <br>
+              <p>Analyze essential components for multi-modal robustness and delve into the
+                limitations imposed by modality preference.</p>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/geometric-mvc.jpg" alt="clean-usnob" width="320" height="160">
             </td>
             <td width="75%" valign="middle">
               <papertitle>Geometric-inspired graph-based Incomplete Multi-view Clustering</papertitle>
