--- a/index.html
+++ b/index.html
@@ -123,6 +123,25 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/sample-level.jpg" alt="clean-usnob" width="320" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>Enhancing Multi-modal Cooperation via Sample-level Modality Valuation</papertitle>
+              <br>
+              <br>
+              <strong>Yake Wei</strong>, Ruoxuan Feng, Zihe Wang, <a href="https://dtaoo.github.io">Di Hu</a>
+              <br>
+              <br>
+              <em>CVPR</em>, 2024
+              <br>
+              TBD
+              <br>
+              <p>Observe and improve the fine-grained cooperation between modalities at sample-level.</p>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/mmrobust.jpg" alt="clean-usnob" width="320" height="160">
             </td>
             <td width="75%" valign="middle">
