--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
               <p style="text-align:center">
                 <a href="mailto:yakewei@ruc.edu.cn">Email</a> &nbsp/&nbsp
+                <a href="https://scholar.google.com/citations?user=i9mWGA0AAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <!--
                 <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp
                 <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp/&nbsp  -->
                 <a href="https://github.com/echo0409/">Github</a>
               </p>
