--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <p>I am a third year PhD student at <a href="http://ai.ruc.edu.cn/">Gaoling School of Artificial Intelligence</a>, Renmin University of China. I am advised by <a href="https://dtaoo.github.io/">Prof. Di Hu</a>. Now I am having a visiting in <a href="http://www.humansensing.cs.cmu.edu/">Human Sensing Lab</a> @ CMU. My research interests focus on multi-modal learning.
               </p>
 
-              <p>I received my bachelor's degree in Computer Science and Technology from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> in 2021.
+              <p>I received my bachelor's degree in Computer Science and Technology from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China (UESTC)</a> in 2021.
               </p>
 
               <p style="text-align:center">
@@ -72,7 +72,7 @@
               <strong>[2021-12]</strong> One paper accepted by TPAMI, thanks to all co-authors!
             </p>
             <p>
-              <strong>[2021-06]</strong> Graduate from University of Electronic Science and Technology of China!
+              <strong>[2021-06]</strong> Graduate from University of Electronic Science and Technology of China (UESTC)!
             </p>
           </td>
         </tr>
