--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <p>I am a third year PhD student at <a href="http://ai.ruc.edu.cn/">Gaoling School of Artificial Intelligence</a>, Renmin University of China. I am advised by <a href="https://dtaoo.github.io/">Prof. Di Hu</a>. Now I am having a visiting in <a href="http://www.humansensing.cs.cmu.edu/">Human Sensing Lab</a> @ CMU. My research interests focus on multi-modal learning.
               </p>
 
-              <p>I received my bachelor's degree in Computer Science and Technology from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China (UESTC)</a> in 2021.
+              <p>I received my bachelor's degree in Computer Science and Technology from <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China</a> (UESTC) in 2021.
               </p>
 
               <p style="text-align:center">
