--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <strong>Conference Reviewer:</strong> CVPR 2022-2024, ECCV 2022, ICCV 2023, AAAI 2023-2024
           </p>
           <p>
-            <strong>Journal Reviewer:</strong> TMM, TPAMI
+            <strong>Journal Reviewer:</strong> TMM, TPAMI, TCSVT
           </p>
         </td>
       </tr>
@@ -134,7 +134,8 @@
               <br>
               <em>CVPR</em>, 2024
               <br>
-              TBD
+              <a href="https://arxiv.org/abs/2309.06255">arXiv</a> / <a href="https://github.com/GeWu-Lab/Valuate-and-Enhance-Multimodal-Cooperation">code
+              </a>
               <br>
               <p>Observe and improve the fine-grained cooperation between modalities at sample-level.</p>
             </td>
