--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>News</heading>
             <p>
+              <strong>[2024-05]</strong> One paper accepted by ICML, thanks to all co-authors!
+            </p>
+            <p>
               <strong>[2024-02]</strong> One paper accepted by CVPR, thanks to all co-authors!
             </p>
             <p>
@@ -120,6 +123,25 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <heading style="padding:20px">Publications</heading>(&#42; equal contribution)
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/sample-level.jpg" alt="clean-usnob" width="320" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>MMPareto: Innocent Uni-modal Assistance for Enhanced Multi-modal Learning</papertitle>
+              <br>
+              <br>
+              <strong>Yake Wei</strong>, <a href="https://dtaoo.github.io">Di Hu</a>
+              <br>
+              <br>
+              <em>ICML</em>, 2024
+              <br>
+              
+              <br>
+              <p>Solve confcits between multi-modal and uni-modal gradients under multi-modal scenarios.</p>
+            </td>
+          </tr>
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
@@ -253,7 +275,7 @@
                 <br>
                 <br>
                 <div style="float:left;">
-                    Updated at Feb. 2024
+                    Updated at May. 2024
                 </div>
                 <div style="float:right;">
                     Thanks <a href="https://jonbarron.info">Jon Barron</a> for this amazing template.
