--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/sample-level.jpg" alt="clean-usnob" width="320" height="160">
+              <img src="images/mmpareto.jpg" alt="clean-usnob" width="320" height="160">
             </td>
             <td width="75%" valign="middle">
               <papertitle>MMPareto: Innocent Uni-modal Assistance for Enhanced Multi-modal Learning</papertitle>
