--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
               Zequn Yang, Han Zhang, <strong>Yake Wei</strong>, Zheng Wang, Feiping Nie, <a href="https://dtaoo.github.io">Di Hu</a>
               <br>
               <br>
-              <em>Pattern Recognition</em>
+              <em>Pattern Recognition</em>, 2023
               <br>
               <a href="https://www.sciencedirect.com/science/article/pii/S0031320323007793">paper</a> / <a href="https://github.com/GeWu-Lab/Geometric-Inspired-Graph-based-Incomplete-Multi-view-Clustering">code
               </a>
@@ -255,7 +255,7 @@
               <a href="https://dtaoo.github.io">Di Hu</a>, <strong>Yake Wei</strong>, <a href="https://shvdiwnkozbw.github.io/">Rui Qian</a>, <a href="https://weiyaolin.github.io/">Weiyao Lin</a>, <a href="https://scholar.google.com/citations?user=v5LctN8AAAAJ&hl">Ruihua Song</a>, <a href="https://scholar.google.com/citations?user=tbxCHJgAAAAJ">Ji-Rong Wen</a>
               <br>
               <br>
-              <em>TPAMI</em>
+              <em>TPAMI</em>, 2021
               <br>
               <a href="https://arxiv.org/pdf/2112.11749.pdf">arXiv</a> / <a href="https://gewu-lab.github.io/CSOL_TPAMI2021/">project page
               </a>
