--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <img src="images/sample-level.jpg" alt="clean-usnob" width="320" height="160">
             </td>
             <td width="75%" valign="middle">
-              <papertitle>Enhancing Multi-modal Cooperation via Sample-level Modality Valuation</papertitle>
+              <papertitle>Enhancing Multimodal Cooperation via Sample-level Modality Valuation</papertitle>
               <br>
               <br>
               <strong>Yake Wei</strong>, Ruoxuan Feng, Zihe Wang, <a href="https://dtaoo.github.io">Di Hu</a>
