--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>News</heading>
             <p>
+              <strong>[2024-05]</strong> We release a survey about fusion on low-quality multi-modal data! <a href="https://arxiv.org/abs/2404.18947">[arXiv]</a>
+            </p>
+            <p>
               <strong>[2024-05]</strong> One paper accepted by ICML, thanks to all co-authors!
             </p>
             <p>
@@ -64,7 +67,7 @@
               <strong>[2023-10]</strong> One paper accepted by Pattern Recognition, thanks to all co-authors!
             </p>
             <p>
-              <strong>[2022-08]</strong> We wrote an article about recent advances in audio-visual learning! <a href="https://gewu-lab.github.io/audio-visual-learning/">[website]</a>
+              <strong>[2022-08]</strong> We release a survey about recent advances in audio-visual learning! <a href="https://gewu-lab.github.io/audio-visual-learning/">[website]</a>
             </p>
             <p>
               <strong>[2022-05]</strong> Gave a talk @ <a href="https://2022.baai.ac.cn/">2022 BAAI Conference</a> . Please find slides <a href="https://zenodo.org/record/6597495/files/2022%E6%99%BA%E6%BA%90%E5%A4%A7%E4%BC%9A-%E5%8D%AB%E9%9B%85%E7%8F%82.pdf?download=1">here</a>!
@@ -97,10 +100,10 @@
     </tbody></table>
 
     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-      <heading style="padding:20px">Preprint</heading>
+      <heading style="padding:20px">Survey</heading>
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle">
-          <img src="images/survey.jpg" alt="clean-usnob" width="320" height="160">
+          <img src="images/avlearning.jpg" alt="clean-usnob" width="320" height="160">
         </td>
         <td width="75%" valign="middle">
           <papertitle>Learning in Audio-visual Context: A Review, Analysis, and New Perspective</papertitle>
@@ -117,6 +120,24 @@
         </td>
       </tr>
 
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle">
+          <img src="images/low_quality.png" alt="clean-usnob" width="320" height="160">
+        </td>
+        <td width="75%" valign="middle">
+          <papertitle>Multimodal Fusion on Low-quality Data: A Comprehensive Survey</papertitle>
+          <br>
+          <br>
+          Qingyang Zhang, <strong>Yake Wei</strong>, Zongbo Han, Huazhu Fu, Xi Peng, Cheng Deng, Qinghua Hu, Cai Xu, Jie Wen, <a href="https://dtaoo.github.io">Di Hu</a>, Changqing Zhang
+          <br>
+          <br>
+
+          <br>
+          <a href="https://arxiv.org/abs/2404.18947">arXiv</a> / <a href="https://github.com/QingyangZhang/awesome-low-quality-multimodal-learning">awesome list</a> 
+          <br>
+          <p>A systematical survey about fusion on low-quality multi-modal data.</p>
+        </td>
+      </tr>
 
     </tbody></table>
 
