--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>News</heading>
             <p>
-              <strong>[2024-05]</strong> We release a survey about fusion on low-quality multi-modal data! <a href="https://arxiv.org/abs/2404.18947">[arXiv]</a>
+              <strong>[2024-05]</strong> We release a survey about fusion of low-quality multi-modal data! <a href="https://arxiv.org/abs/2404.18947">[arXiv]</a>
             </p>
             <p>
               <strong>[2024-05]</strong> One paper accepted by ICML, thanks to all co-authors!
@@ -136,7 +136,7 @@
           <br>
           <a href="https://arxiv.org/abs/2404.18947">arXiv</a> / <a href="https://github.com/QingyangZhang/awesome-low-quality-multimodal-learning">awesome list</a> 
           <br>
-          <p>A systematical survey about fusion on low-quality multi-modal data.</p>
+          <p>A systematical survey about fusion of low-quality multi-modal data.</p>
         </td>
       </tr>
 
