--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
               <br>
               <em>ICML</em>, 2024
               <br>
-              
+              <a href="https://arxiv.org/abs/2405.17730">arXiv</a> / <a href="https://github.com/GeWu-Lab/MMPareto_ICML2024">code
+              </a>
               <br>
               <p>Solve confcits between multi-modal and uni-modal gradients under multi-modal scenarios.</p>
             </td>
