--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               <img src="images/mmpareto.jpg" alt="clean-usnob" width="320" height="160">
             </td>
             <td width="75%" valign="middle">
-              <papertitle>MMPareto: Innocent Uni-modal Assistance for Enhanced Multi-modal Learning</papertitle>
+              <papertitle>MMPareto: Boosting Multimodal Learning with Innocent Unimodal Assistance</papertitle>
               <br>
               <br>
               <strong>Yake Wei</strong>, <a href="https://dtaoo.github.io">Di Hu</a>
