--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>News</heading>
             <p>
+              <strong>[2024-06]</strong> Attend CVPR 2024 @ Seattle. Had a wonderful week!</a>
+            </p>
+            <p>
               <strong>[2024-05]</strong> We release a survey about fusion of low-quality multi-modal data! <a href="https://arxiv.org/abs/2404.18947">[arXiv]</a>
             </p>
             <p>
@@ -164,7 +167,7 @@
               <a href="https://arxiv.org/abs/2405.17730">arXiv</a> / <a href="https://github.com/GeWu-Lab/MMPareto_ICML2024">code
               </a>
               <br>
-              <p>Solve confcits between multi-modal and uni-modal gradients under multi-modal scenarios.</p>
+              <p>Solve conflicts between multi-modal and uni-modal gradients under multi-modal scenarios.</p>
             </td>
           </tr>
 
