--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <strong>[2022-05]</strong> Gave a talk @ <a href="https://2022.baai.ac.cn/">2022 BAAI Conference</a> . Please find slides <a href="https://zenodo.org/record/6597495/files/2022%E6%99%BA%E6%BA%90%E5%A4%A7%E4%BC%9A-%E5%8D%AB%E9%9B%85%E7%8F%82.pdf?download=1">here</a>!
             </p>
             <p>
-              <strong>[2022-03]</strong> Two papers accepted by CVPR 2022, thanks to all co-authors!
+              <strong>[2022-03]</strong> Two papers accepted by CVPR, thanks to all co-authors!
             </p>
             <p>
               <strong>[2021-12]</strong> One paper accepted by TPAMI, thanks to all co-authors!
