--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>News</heading>
-
+            <p>
+              <strong>[2024-07]</strong> One paper accepted by ECCV, thanks to all co-authors!
+            </p>
             <p>
               <strong>[2024-05]</strong> We release a survey about fusion of low-quality multi-modal data! <a href="https://arxiv.org/abs/2404.18947">[arXiv]</a>
             </p>
@@ -148,6 +150,25 @@
     
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <heading style="padding:20px">Publications</heading>(&#42; equal contribution)
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/mmpareto.jpg" alt="clean-usnob" width="320" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>Diagnosing and Re-learning for Balanced Multi-modal Learning</papertitle>
+              <br>
+              <br>
+              <strong>Yake Wei</strong>, Siwei Li, Ruoxuan Feng, <a href="https://dtaoo.github.io">Di Hu</a>
+              <br>
+              <br>
+              <em>ECCV</em>, 2024
+              <br>
+              TBD
+              <br>
+              <p>Dynimically re-initialize uni-modal encoder to enhance both worse-learnt and well-learnt modalities.</p>
+            </td>
+          </tr>
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
@@ -301,7 +322,7 @@
                 <br>
                 <br>
                 <div style="float:left;">
-                    Updated at May. 2024
+                    Updated at July. 2024
                 </div>
                 <div style="float:right;">
                     Thanks <a href="https://jonbarron.info">Jon Barron</a> for this amazing template.
