--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/mmpareto.jpg" alt="clean-usnob" width="320" height="160">
+              <img src="images/reinit.jpg" alt="clean-usnob" width="320" height="160">
             </td>
             <td width="75%" valign="middle">
               <papertitle>Diagnosing and Re-learning for Balanced Multi-modal Learning</papertitle>
