--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               <img src="images/reinit.jpg" alt="clean-usnob" width="320" height="160">
             </td>
             <td width="75%" valign="middle">
-              <papertitle>Diagnosing and Re-learning for Balanced Multi-modal Learning</papertitle>
+              <papertitle>Diagnosing and Re-learning for Balanced Multimodal Learning</papertitle>
               <br>
               <br>
               <strong>Yake Wei</strong>, Siwei Li, Ruoxuan Feng, <a href="https://dtaoo.github.io">Di Hu</a>
@@ -164,7 +164,8 @@
               <br>
               <em>ECCV</em>, 2024
               <br>
-              TBD
+              <a href="https://arxiv.org/abs/2407.09705">arXiv</a> / <a href="https://github.com/GeWu-Lab/Diagnosing_Relearning_ECCV2024">code
+              </a>
               <br>
               <p>Dynimically re-initialize uni-modal encoder to enhance both worse-learnt and well-learnt modalities.</p>
             </td>
