--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>News</heading>
             <p>
+              <strong>[2024-07]</strong> Gave a talk about "Balanced multimodal learning" @ TechBeat! <a href="https://www.techbeat.net/talk-info?id=887">[Record]</a>
+            </p>
+            <p>
               <strong>[2024-07]</strong> One paper accepted by ECCV, thanks to all co-authors!
             </p>
             <p>
